k8s/namespace-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume-app
